attempt to fix horizontal bar on smaller mobile devices

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap');
 
+body{
+    overflow-x: hidden !important;
+}
 
 .linkImg {
     display: flex;
